02/10/15-10:46:11: Refactored Test Suite for recursion support.
02/10/15-11:39:01: Added support for ASSERT macro.
02/10/15-17:23:24: Added support for test packages.
02/10/15-17:38:25: Cut Testing header in multiple parts.
02/10/15-22:24:04: Added minimal support to retrieve passed and failed tests.
02/10/15-23:22:37: Added CList usage for TestCases
02/10/15-23:29:15: Added list usage for TestSuites.
02/11/15-09:08:21: Retrieve all test data in TestSessionResult.
02/11/15-13:56:46: Retrieving messages as part of the test data.
02/11/15-16:06:41: Working on test result report page.
02/11/15-16:10:04: Added the html files on the repository.
02/12/15-09:18:43: Adding additional formating for test log page.
02/12/15-23:22:53: Updated log template to handle colors properly.
02/13/15-17:38:46: Started implementation of vecd class.
02/13/15-23:18:35: Investigating issue with CList for test suites.
02/14/15-09:11:15: Using array list for test suites to avoid linked list pointer mixing.
02/14/15-11:33:41: Added initial implementation for StringStream.
02/14/15-14:41:55: Added initial implementation for logging system.
02/14/15-15:05:56: Added support for FileLogger close.
02/15/15-16:49:44: Added core strategy implementation.
02/15/15-18:55:58: Trying to get algorithm to work.
02/17/15-02:04:20: Started implementation of RRL model.
02/17/15-12:11:49: Adding support for RRL model debugging.
02/18/15-17:27:10: Added initial implementation for LBFGS algorithm.
02/19/15-01:07:34: Finalized LBFGS implementation. Adding source for octave version.
02/19/15-14:56:21: Implemented optimization of RRL model with minCG.
02/21/15-16:51:36: Investigations on RRL model.
02/22/15-17:32:51: winning 0.00143 units in 1 week without too much drawndown.
02/22/15-18:02:12: Using eval_len as max evaluation length.
02/23/15-12:41:45: Added start and end signals for training.
02/23/15-14:52:19: Adding implementation of RRLCostFunction class.
02/23/15-15:58:09: Creating proper RRLModel.