@@ -9,4 +9,5 @@ Logs/*
 # Ignore the generated files:
 # Files/*
 Files/TestResults.html
+Files/RRL_Results.html
 Files/test.log
