@@ -8,6 +8,7 @@ Base class representing the data that can be passed to the RRL model class.
 class nvRRLModelTraits : public nvObject
 {
 protected:
+  int _historyLength;
 
 public:
   /* Default constructor,
@@ -19,12 +20,24 @@ public:
 
   /* Assignment operator. */
   nvRRLModelTraits *operator=(const nvRRLModelTraits &rhs);
+
+  /* Check if we should keep history for this model. */
+  bool keepHistory() const;
+
+  /* Specify the length of the history to keep. 
+    0 means no limit.
+    -1 means no history. */
+  nvRRLModelTraits *historyLength(int len);
+
+  /* Retrieve the desired history length. */
+  int historyLength() const;  
 };
 
 
 ///////////////////////////////// implementation part ///////////////////////////////
 
 nvRRLModelTraits::nvRRLModelTraits()
+  : _historyLength(-1)
 {
 }
 
@@ -35,5 +48,22 @@ nvRRLModelTraits::nvRRLModelTraits(const nvRRLModelTraits &rhs)
 
 nvRRLModelTraits *nvRRLModelTraits::operator=(const nvRRLModelTraits &rhs)
 {
+  _historyLength = rhs._historyLength;
   return GetPointer(this);
+}
+
+bool nvRRLModelTraits::keepHistory() const
+{
+  return _historyLength>=0;
+}
+
+nvRRLModelTraits *nvRRLModelTraits::historyLength(int len)
+{
+  _historyLength = len;
+  return GetPointer(this);
+}
+
+int nvRRLModelTraits::historyLength() const
+{
+  return _historyLength;
 }
